--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "xs-server.js",
   "dependencies": {
     "body-parser": "^1.4.3",
-    "express": "^4.4.5"
+    "express": "^4.4.5",
+    "pondjs": "^0.4.0",
+    "react": "^0.14.7",
+    "react-timeseries-charts": "^0.8.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -14,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/learnb/react-xs-ui.git"
   },
   "keywords": [
     "react",
@@ -22,12 +25,12 @@
     "comment",
     "example"
   ],
-  "author": "petehunt",
+  "author": "bryan learn",
   "bugs": {
-    "url": "https://github.com//issues"
+    "url": "https://github.com/learnb/react-xs-ui/issues"
   },
-  "homepage": "https://github.com/",
-  "engines" : {
-    "node" : "0.12.x"
+  "homepage": "https://github.com/learnb/react-xs-ui",
+  "engines": {
+    "node": "0.12.x"
   }
 }
